--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -20,6 +20,11 @@
 			<label index="tx_blogexample_domain_model_post.published">Published</label>
 			<label index="tx_blogexample_domain_model_post.tags">Tags</label>
 			<label index="tx_blogexample_domain_model_post.comments">Comments</label>
+			<label index="tx_blogexample_domain_model_person">Person</label>
+			<label index="tx_blogexample_domain_model_person.firstname">Firstname</label>
+			<label index="tx_blogexample_domain_model_person.lastname">Lastname</label>
+			<label index="tx_blogexample_domain_model_person.email">E-Mail</label>
+			<label index="tx_blogexample_domain_model_person.avatar">Avatar</label>
 			<label index="tx_blogexample_domain_model_comment">Comment</label>
 			<label index="tx_blogexample_domain_model_comment.date">Date</label>
 			<label index="tx_blogexample_domain_model_comment.author">Author</label>
