This commit prepares the BlogExample for the upcoming commit of Extbase [+TASK] BlogExample: Added Domain Object Administrator as an example how to utilize fe_users; PLEASE UPDATE YOUR DATABASE! [+TASK] BlogExample: Added a preliminary findSpecial() method for testing [+TASK] BlogExample: Set the loading strategy of comments to "proxy" [+TASK] BlogExample: Adjusted templates (not fully functional by now)

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -11,6 +11,7 @@
 			<label index="tx_blogexample_domain_model_blog.description">Short description</label>
 			<label index="tx_blogexample_domain_model_blog.logo">Logo</label>
 			<label index="tx_blogexample_domain_model_blog.posts">Posts</label>
+			<label index="tx_blogexample_domain_model_blog.administrator">Administrator</label>
 			<label index="tx_blogexample_domain_model_post">Post</label>
 			<label index="tx_blogexample_domain_model_post.title">Title</label>
 			<label index="tx_blogexample_domain_model_post.date">Date</label>
