--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -2,7 +2,7 @@
 <T3locallang>
 	<meta type="array">
 		<type>database</type>
-		<description>Language labels for database tables/fields belonging to extension 'blogexample'</description>
+		<description>Language labels for database tables/fields belonging to extension 'blog_example'</description>
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
