--- a/Resources/Private/Language/locallang_mod.xml
+++ b/Resources/Private/Language/locallang_mod.xml
@@ -2,7 +2,7 @@
 <T3locallang>
     <meta type="array">
         <type>module</type>
-        <description>Language labels for module &quot;tools_txblogexampleM1&quot; - header, description</description>
+        <description>Language labels for module &quot;web_blogadmin&quot; - header, description</description>
     </meta>
     <data type="array">
         <languageKey index="default" type="array">
