[!!!][+BUGFIX] BlogExample: Solved MM relations by adding proper configuration and "sorting_foreign" fields to mm tables. PLEASE UPDATE YOUR DATABASE! Resolves #4109, #4093, #3983.

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -34,6 +34,7 @@
 			<label index="tx_blogexample_domain_model_comment.content">Content</label>
 			<label index="tx_blogexample_domain_model_tag">Tag</label>
 			<label index="tx_blogexample_domain_model_tag.name">Name</label>
+			<label index="tx_blogexample_domain_model_tag.posts">Related posts</label>
 		</languageKey>
 	</data>
 </T3locallang>
