--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -13,6 +13,7 @@
 			<label index="tx_blogexample_domain_model_blog.posts">Posts</label>
 			<label index="tx_blogexample_domain_model_blog.administrator">Administrator</label>
 			<label index="tx_blogexample_domain_model_post">Post</label>
+			<label index="tx_blogexample_domain_model_post.blog">Related to</label>
 			<label index="tx_blogexample_domain_model_post.title">Title</label>
 			<label index="tx_blogexample_domain_model_post.date">Date</label>
 			<label index="tx_blogexample_domain_model_post.author">Author</label>
